[tool.poetry]
name = "keep_exporter"
version = "2.0.0"
description = "Google Keep note exporter utility"
authors = ["Nathan Beals <ndbeals@users.noreply.github.com>"]
license = "GPL v3"

[tool.poetry.scripts]
keep_export = "keep_exporter.cli:main"

[tool.poetry.dependencies]
python = "^3.8"
gkeepapi = "^0.13.4"
python-frontmatter = "^0.5.0"
PyYAML = "^5.3.1"
pathvalidate = "^2.3.2"
click = "^8.0.1"
mdutils = "^1.3.0"
click-config-file = "^0.6.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
pylint = "^2.11.1"
isort = "^5.9.3"
Sphinx = "^4.2.0"
sphinx-rtd-theme = "^1.0.0"

[tool.isort]
profile = "black"
src_paths = ["keep_export"]


[tool.pylint.MASTER]
max-line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
